--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 04:54:00 PM</p>
+    <p class="lastupdate">09/09/2020 04:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">78.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">78.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.2&#176;F</td>
+        <td class="data">78.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.6&#176;F</td>
+        <td class="data">47.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">34%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.825 inHg (-0.013)</td>
+        <td class="data">29.828 inHg (-0.009)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph SW (225&#176;)</td>
+        <td class="data">7 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -439,12 +439,12 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
+          2<br/>
           201
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          249
+          248
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 2 hours, 7 minutes</td>
+      <td class="data">8 days, 2 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 2 hours, 7 minutes</td>
+      <td class="data">8 days, 2 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
