--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 08:19:00 PM</p>
+    <p class="lastupdate">09/09/2020 08:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -209,8 +209,8 @@
         <tr>
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
-          <td class="data new_row">29.868<br/>
-            <span class="timestamp">11:23:02 AM</span><br/>
+          <td class="data new_row">29.871<br/>
+            <span class="timestamp">08:23:03 PM</span><br/>
             29.700<br/>
             <span class="timestamp">12:01:01 AM</span>
           </td>
